--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -58,11 +58,11 @@
     <Reference Include="CsvHelper, Version=15.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.15.0.3\lib\net47\CsvHelper.dll</HintPath>
     </Reference>
-    <Reference Include="Devmasters.Cache, Version=1.472.4.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devmasters.Cache.1.472.4.4\lib\net40\Devmasters.Cache.dll</HintPath>
+    <Reference Include="Devmasters.Cache, Version=1.472.20.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Devmasters.Cache.1.472.20.1\lib\net40\Devmasters.Cache.dll</HintPath>
     </Reference>
-    <Reference Include="Devmasters.Core, Version=1.472.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devmasters.Core.1.472.5\lib\net40\Devmasters.Core.dll</HintPath>
+    <Reference Include="Devmasters.Core, Version=1.472.20.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Devmasters.Core.1.472.20\lib\net40\Devmasters.Core.dll</HintPath>
     </Reference>
     <Reference Include="Devmasters.Imaging, Version=1.472.1.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devmasters.Imaging.1.472.1.1\lib\net40\Devmasters.Imaging.dll</HintPath>
@@ -85,9 +85,6 @@
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="Enyim.Caching, Version=2.9.0.0, Culture=neutral, PublicKeyToken=cec98615db04012e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devmasters.Cache.1.472.4.4\lib\net40\Enyim.Caching.dll</HintPath>
     </Reference>
     <Reference Include="HlidacStatu.Api.Dataset.Connector, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HlidacStatu.Api.Dataset.Connector.1.3.3\lib\net462\HlidacStatu.Api.Dataset.Connector.dll</HintPath>
@@ -1496,7 +1493,7 @@
     <Content Include="Views\Weby\_Info.cshtml" />
     <Content Include="Views\Insolvence\PristupOmezen.cshtml" />
     <Content Include="Views\Shared\Bot.cshtml" />
-    <Content Include="Views\Insolvence\Index.Content.cshtml" />
+    <Content Include="Views\Insolvence\Index.Content.Charts.cshtml" />
     <Content Include="Views\Manage\FindPerson.cshtml" />
     <Content Include="Views\Manage\CreatePerson.cshtml" />
     <Content Include="Views\Manage\EditPersonNP.cshtml" />
@@ -1526,6 +1523,7 @@
     <Content Include="Views\Insolvence\_OnRadarInfo.cshtml" />
     <Content Include="Views\Home\HledatSmlouvy.cshtml" />
     <Content Include="Views\Osoby\Hledat.cshtml" />
+    <Content Include="Views\Insolvence\Index.Content.Politici.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
