Couchbase cache improvements

--- a/Plugin.TransparetniUcty/packages.config
+++ b/Plugin.TransparetniUcty/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
@@ -16,4 +16,5 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
 </packages>
