--- a/Tests/WSDL tester/packages.config
+++ b/Tests/WSDL tester/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Frontenac.Blueprints" version="2.5.0" targetFramework="net472" />
@@ -9,4 +9,5 @@
   <package id="ini-parser" version="2.5.2" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
 </packages>
