--- a/DotaceLoader/packages.config
+++ b/DotaceLoader/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.30" targetFramework="net472" />
-  <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Cache" version="1.472.20.1" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
@@ -16,5 +16,6 @@
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
