--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Autofac" version="5.1.2" targetFramework="net472" />
   <package id="CsvHelper" version="15.0.3" targetFramework="net472" />
-  <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Cache" version="1.472.20.1" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.DatabaseUpgrader" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
@@ -79,6 +79,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
