--- a/Plugin.Enhancers/packages.config
+++ b/Plugin.Enhancers/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
@@ -31,6 +31,7 @@
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
