--- a/Util.WebShot/packages.config
+++ b/Util.WebShot/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AsyncChromeDriver" version="0.5.5" targetFramework="net472" />
   <package id="AsyncWebDriver" version="1.4.2" targetFramework="net472" />
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
   <package id="IAsyncWebBrowserClient" version="0.2.3" targetFramework="net472" />
@@ -46,6 +46,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
   <package id="Zu.ChromeDevToolsClient" version="0.5.5" targetFramework="net472" />
