--- a/Util/packages.config
+++ b/Util/packages.config
@@ -3,8 +3,8 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.16" targetFramework="net472" />
-  <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
-  <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
+  <package id="Devmasters.Cache" version="1.472.20.1" targetFramework="net472" />
+  <package id="Devmasters.Core" version="1.472.20" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
@@ -25,6 +25,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
   <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net472" />
 </packages>
