--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -10,7 +10,7 @@
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
-  <package id="EmguCV" version="3.1.0.1" targetFramework="net472" />
+  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Enums.NET" version="3.0.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
