--- a/DotaceLoader/App.config
+++ b/DotaceLoader/App.config
@@ -84,8 +84,7 @@
   </entityFramework>
   <appSettings>
     <add key="ESConnection" value="http://localhost:9200" />
-    <add key="postgres" value="Host=77.93.208.113;Username=hlidacstatu;Password=UtatsCadilh;Database=final" />
-    <!--<add key="postgres" value="Host=hostname;Username=postgres;Password=password;Database=postgres" />-->
+    <add key="postgres" value="Host=hostname;Username=postgres;Password=password;Database=postgres" />
     <add key="WebAppDataPath" value="d:\repos\HlidacStatu\HlidacStatu\Web.Statu\App_Data" />
     <add key="DumpsPath" value="d:\repos\HlidacStatu\Data\_dumps" />
     <add key="CnnString" value="data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework" />
