--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -460,6 +460,7 @@
     <Compile Include="Framework\RobotFromIP.cs" />
     <Compile Include="Framework\Shared\Data.cs" />
     <Compile Include="Framework\LimitedAccess.cs" />
+    <Compile Include="Framework\SwaggerControllerNameAttribute.cs" />
     <Compile Include="Framework\Visit.cs" />
     <Compile Include="Framework\DisableController.cs" />
     <Compile Include="Framework\Extensions.Html.cs" />
