--- a/Lib.OCR.Api.Client/Lib.OCR.Api.Client.csproj
+++ b/Lib.OCR.Api.Client/Lib.OCR.Api.Client.csproj
@@ -44,8 +44,8 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="MimeSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MimeSharp.1.0.0\lib\MimeSharp.dll</HintPath>
+    <Reference Include="MimeMapping, Version=1.0.1.26, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MimeMapping.1.0.1.26\lib\netstandard2.0\MimeMapping.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
