--- a/Lib.OCR.Api.Client/packages.config
+++ b/Lib.OCR.Api.Client/packages.config
@@ -4,7 +4,7 @@
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
-  <package id="MimeSharp" version="1.0.0" targetFramework="net472" />
+  <package id="MimeMapping" version="1.0.1.26" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
 </packages>
