--- a/Util/packages.config
+++ b/Util/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="MimeMapping" version="1.0.1.26" targetFramework="net472" />
   <package id="NEST" version="7.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
