--- a/HlidacStatu.Q.Tasks/HlidacStatu.Q.Tasks.csproj
+++ b/HlidacStatu.Q.Tasks/HlidacStatu.Q.Tasks.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Dataset.cs" />
     <Compile Include="Audio.cs" />
     <Compile Include="Listener.cs" />
+    <Compile Include="Net.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskHandler.cs" />
   </ItemGroup>
