--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -82,7 +82,7 @@
                  relaxedUrlToFileSystemMapping="true"                 
                  />
     <globalization uiCulture="cs" culture="cs-CZ"/>
-    <customErrors mode="Off" >
+    <customErrors mode="RemoteOnly" >
     </customErrors>
     <caching>
       <outputCacheSettings>
