dataset wizard fix

--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1534,7 +1534,7 @@
     <Content Include="Views\Insolvence\Index.Content.Politici.cshtml" />
     <Content Include="Views\Home\ZobrazD.cshtml" />
     <Content Include="Views\Manage\EditClassification.cshtml" />
-    <Content Include="Views\Home\Reports\27_COVID.cshtml" />
+    <Content Include="Views\Home\Reports\27_COVIDPodpora.cshtml" />
     <Content Include="Views\ApiV1\ModalZneplatnenaSmlouva.cshtml" />
   </ItemGroup>
   <ItemGroup>
